# RKSI-2024-VIPER

./: README.md
.github/workflows/: main.yml
auth-service/: Makefile  docker-compose-local-dev.yml
auth-service/api/: .env-dist  .env-prod  Dockerfile.webapi  Makefile  pyproject.toml
auth-service/api/certs/: jwt-public.pem
auth-service/api/docker/: app.sh
auth-service/api/src/application/client/: reader.py  service.py
auth-service/api/src/core/db/: db_types.py  logs.py
auth-service/api/src/domain/exceptions/: client.py
auth-service/api/src/infrastructure/db/: exception_mapper.py
auth-service/api/src/infrastructure/gunicorn/: logger.py
auth-service/api/src/infrastructure/services/: entity_service_impl.py
auth-service/api/src/presentation/web_api/: exceptions.py  responses.py
auth-service/api/tests/: conftest.py  handmade.py
auth-service/api/tests/auth/: code_to_token.py
auth-service/api/tests/integration/user/: test_update.py
auth-service/app/conf.d/: app.conf
auth-service/investments_src/: Dockerfile  base_banki_ru_gateway.py  currency_gateway.py  di_container.py  main.py  pyproject.toml  share_gateway.py
auth-service/static/pages/: reg.html
backend/: .gitignore  docker-compose.yml
backend/api/: .gitignore  README.md  pyproject.toml
backend/api/certs/: jwt-private.pem
backend/api/src/application/auth/: token_types.py
backend/api/src/application/client/: reader.py  service.py
backend/api/src/application/common/: id_provider.py
backend/api/src/application/investments/: buy_investment_handler.py  queries.py  sell_investment_handler.py
backend/api/src/application/strategy/: create_new_hanlder.py  strategy_query_handler.py
backend/investments_src/: .env  .env-dist  .env-prod  Dockerfile  Makefile  base_banki_ru_gateway.py  bonds_gateway.py  currency_gateway.py  deposit_gateway.py  di_container.py  gold_gateway.py  investments_service.py  main.py  pyproject.toml  res.json  share_gateway.py
backend/investments_src/news/: news_gateway.py
backend/investments_src/predict/: config.py  gateway.py
backend/static/pages/: login.html  reg.html
(+109 files in other folders)
